<resources>
    <string name="app_name">AdminApp</string>
    <string name="title_txt">Registered Player Apps</string>
    <string name="intervalPause">PAUSE</string>
    <string name="intervalSongs">PLAY</string>
    <string name="start_time">Start Hour</string>
    <string name="end_time">End Hour</string>
    <string name="update">Update</string>
    <string name="player_status">Player Status:</string>
    <string name="song_number">Song number:</string>
    <string name="connected"><![CDATA[<b><font color="#33a3ed"> CONNECTED</b>]]></string>
    <string name="disconnected"><![CDATA[<b><font color="#ff0000"> DISCONNECTED</b>]]></string>
    <string name="warning">Warning</string>
    <string name="updateCompleted">Player was successfully updated</string>
    <string name="updateSent">Update message sent</string>
    <string name="playing"><![CDATA[<b><font color="#00ff00"> PLAYING</b>]]></string>
    <string name="pause"><![CDATA[<b><font color="#00cc00"> PAUSE</b>]]></string>
    <string name="remain">Remain</string>
    <string name="setup_time">Setup time</string>
    <string name="empty_field">All fields must be completed</string>
    <string name="no_connected_device">No connected devices</string>

    <string name="google_maps_key">AIzaSyBBhHEwpA-6UkWeBONUg69Xl4oDyAvjn0c</string>
</resources>
