<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_stacked_max_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolumeDown"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:text="-" />

        <TextView
            android:id="@+id/txtVolume"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="12"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnVolumeUp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:text="+" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aaaaaa"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intervalSongs"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_songInterval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/bg_round_grey_color"
                android:gravity="center"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intervalPause"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_pauseInterval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/bg_round_grey_color"
                android:gravity="center"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_startTime"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight="2"
                android:background="@color/color_grey"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_endTime"
                android:layout_width="0dp"
                android:layout_height="@dimen/control_height"
                android:layout_weight="2"
                android:background="@color/color_grey"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/update"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_status"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_connectStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="--"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_songNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_remain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
